// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsViewContainer render renders spinner when stores not ready 1`] = `
<StyledSpinnerBase
  className="details-view-spinner"
  label="Loading..."
  size={3}
/>
`;

exports[`DetailsViewContainer renderContent renders TargetPageClosedView when target page closed 1`] = `
"<div className=\\"table column-layout main-wrapper\\">
  <Header deps={{...}} selectedPivot={{...}} featureFlagStoreData={{...}} dropdownClickHandler={[undefined]} tabClosed={true} />
  <TargetPageClosedView />
</div>"
`;

exports[`DetailsViewContainer renderContent shows target tab was closed when stores are not loaded 1`] = `
"<div className=\\"table column-layout main-wrapper\\">
  <Header deps={{...}} selectedPivot={0} featureFlagStoreData={{...}} dropdownClickHandler={[undefined]} tabClosed={true} />
  <TargetPageClosedView />
</div>"
`;
